static files updated

--- a/manifest.json
+++ b/manifest.json
@@ -176,7 +176,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "BooseApp.AppInt",
-      "Summary": null
+      "Summary": "<p sourcefile=\"api/BooseApp.AppInt.yml\" sourcestartlinenumber=\"1\">Implements the BOOSE <code>int</code> command to declare an integer variable and optionally assign a value.</p>\n"
     },
     {
       "type": "ManagedReference",
@@ -204,7 +204,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "BooseApp.AppMoveTo",
-      "Summary": null
+      "Summary": "<p sourcefile=\"api/BooseApp.AppMoveTo.yml\" sourcestartlinenumber=\"1\">Implements the BOOSE <code>moveto</code> command to move the drawing cursor to a new (x, y) position.</p>\n"
     },
     {
       "type": "ManagedReference",
@@ -274,7 +274,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "BooseApp.AppRect",
-      "Summary": null
+      "Summary": "<p sourcefile=\"api/BooseApp.AppRect.yml\" sourcestartlinenumber=\"1\">Implements the BOOSE <code>rect</code> command to draw a rectangle with the given width and height.</p>\n"
     },
     {
       "type": "ManagedReference",
@@ -330,7 +330,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "BooseApp.IEvaluation",
-      "Summary": null
+      "Summary": "<p sourcefile=\"api/BooseApp.IEvaluation.yml\" sourcestartlinenumber=\"1\">Provides helper methods to evaluate BOOSE expressions (int, real/double, bool and string).</p>\n"
     },
     {
       "type": "ManagedReference",
